# easylist

./: .gitignore  Dockerfile  README  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: format-api.yml  format-code.yml
assets/: easylist.db
easylist/: __main__.py
easylist/api/: config.py  consts.py  server.py  utils.py
easylist/api/application/dtos/: login_dto.py  student_dto.py  teacher_dto.py
easylist/api/application/services/: hash_service.py
easylist/api/application/use_cases/: auth_usecase.py  student_usecase.py  teacher_usecase.py
easylist/api/domain/: exceptions.py
easylist/api/domain/entities/: __init__.py  student_entity.py  teacher_entity.py
easylist/api/domain/interfaces/: intf_student_repo.py  intf_teacher_repo.py
easylist/api/domain/repositories/: student_repository.py  teacher_repository.py
easylist/api/infrastructure/database/: __init__.py
easylist/api/infrastructure/rest/controllers/: dependencies.py
easylist/api/infrastructure/rest/controllers/auth/: __init__.py  dependencies.py  login.py
easylist/api/infrastructure/rest/controllers/students/: __init__.py  create_student.py  delete_student.py  dependencies.py  get_student.py  list_students.py  update_student.py
easylist/api/infrastructure/rest/controllers/teacher/: __init__.py  create_teacher.py  delete_teacher.py  dependencies.py  get_teacher.py  update_teacher.py
easylist/gui/: app.py  consts.py
easylist/gui/components/: button.py  left_navbar.py
easylist/gui/services/: api_client.py
easylist/web/: bun.lockb  components.json  package.json  tailwind.config.ts
easylist/web/src/app/: globals.css  layout.tsx
easylist/web/src/app/auth/login/: page.tsx
easylist/web/src/app/d/: layout.tsx
easylist/web/src/app/d/asistencia/: page.tsx
easylist/web/src/app/d/calificaciones/: page.tsx
easylist/web/src/app/d/estadisticas/: page.tsx
easylist/web/src/app/d/estudiantes/: page.tsx
easylist/web/src/app/d/examenes/: page.tsx
easylist/web/src/app/d/programacion/: page.tsx
easylist/web/src/app/d/reportes/: page.tsx
easylist/web/src/app/s/: layout.tsx
easylist/web/src/app/s/configuracion/: page.tsx
easylist/web/src/app/s/notificaciones/: page.tsx
easylist/web/src/shared/components/: providers.tsx
easylist/web/src/shared/components/modules/reports/: export-button.tsx
easylist/web/src/shared/components/modules/sidebar/: app-sidebar.tsx  course-switch.tsx  nav-sidebar.tsx  nav-user.tsx
easylist/web/src/shared/components/modules/students/: add-student.tsx
easylist/web/src/shared/components/modules/students/table/: columns.tsx  (+7 more)
easylist/web/src/shared/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  toast.tsx  toaster.tsx  tooltip.tsx
easylist/web/src/shared/hooks/: use-toast.ts
easylist/web/src/shared/lib/: consts.ts  utils.ts
easylist/web/src/shared/lib/data/: schema-student.ts  students.json
scripts/: init_db.py  seed.py
